tests/errors/syn_class_var9.java
public class syn_class_var9 {
public static int ;
}